--- a/app/assets/manifest.json
+++ b/app/assets/manifest.json
@@ -1,9 +1,11 @@
+// ## chrome extension manifest.
+
 {
   "name": "CHANGE THIS : Extension boilerplate",
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "This extension was created with the awesome extensionizr.io",
-  "homepage_url": "http://extensionizr.com",
+  "homepage_url": "http://bigbearlabs.com/research",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -22,12 +24,13 @@
     "default_title": "browser action demo",
     "default_popup": "browser_action/browser_action.html"
   },
-  // "chrome_url_overrides": {
-  //   "history": "override/override.html"
-  // },
+  "chrome_url_overrides": {
+    "history": "history/index.html"
+  },
   "permissions": [
     "history",
-    "tabs"
+    "tabs",
+    "file:///*"
   ],
   "omnibox": {
     "keyword": "extensionizr"
