tracer bullet complete: successfully posts new urls to webbuddy api running locally (59124)

--- a/app/assets/manifest.json
+++ b/app/assets/manifest.json
@@ -30,11 +30,15 @@
   "permissions": [
     "history",
     "tabs",
-    "file:///*"
+    "file:///*",
+    "http://localhost/*"
   ],
   "omnibox": {
     "keyword": "extensionizr"
   }
+  // ,
+  // "content_security_policy": "script-src 'self' http://localhost 'unsafe-eval'; object-src 'self'"
+
   // ,
   // "content_scripts": [
   //   {
