post page on loading or complete with thumbnail.

--- a/app/assets/manifest.json
+++ b/app/assets/manifest.json
@@ -30,8 +30,8 @@
   "permissions": [
     "history",
     "tabs",
-    "file:///*",
-    "http://localhost/*"
+
+    "<all_urls>"
   ],
   "omnibox": {
     "keyword": "extensionizr"
